# streamer

./: go.mod  streamer.go
lib/: unitybuild.c
lib/sdk/: CMakeLists.txt  amxplugin2.c
lib/sdk/amx/: amx2.h
